# CGCourse2023

./: .gitignore  CMakeLists.txt  vcpkg.json
.run/: CGProject.cpp.run.xml  Cmake.run.xml
CGProject/: 00CGProject.cpp  01MyFirstTriangle.cpp  02WrappedTriangles.cpp  03FunnyShape.cpp  04MyCar.cpp  05MyCarWithStack.cpp  CGProject.cpp  GLFWWindowStarter.h  GlobalSpace.h  MyFirstTriangle.cpp  WrappedTriangles.cpp
CGProject/CodeTest/: 02WrappedTriangles.cpp  03FunnyShape.cpp  04MyCar.cpp  05MyCarWithStack.cpp
CGProject/exercise/: 01MyFirstTriangle.cpp  03FunnyShape.cpp  04MyCar.cpp  05MyCarWithStack.cpp
Models/Datsun_280Z/: Datsun_280Z.fbx  Datsun_280Z.mtl
Shaders/: Basic.vert  Blinn-Phong_ShadowMapping.frag  Blinn-Phong_ShadowMapping.vert  DiffusiveColor.vert  Phong_shadow_mapping.frag  Phong_shadow_mapping.vert  SkyBox.frag  SkyBox.vert  depth_map.frag  depth_map.vert  flat.frag  phong.frag  phong.vert  phong_saved1.frag  phong_saved1.vert  shadow_mapping.vert
Shaders/Prof/: FlatShading.frag  SkyBox.frag  SkyBox.vert  ao.frag  compute_shader.comp  flatAlpha.frag  phong.vert  phong_saved1.vert  shadow_mapping.frag  shadow_mapping.vert
src/: Lez6_trackball.cpp  lez0_setup.cpp  lez10_shading_imgui.cpp  lez11_boot_texture_bump_mapping.cpp  lez11_texture_bump_mapping.cpp  lez12_onthefly_coordinates.cpp  lez13_shadows.cpp  lez14_ambient_obscurance.cpp  lez15_compute_shader.cpp  lez1_my_first_triangle.cpp  lez2_wrapping.cpp  lez3_create_box2d.cpp  lez4_my_first_car.cpp  lez5_matrix_stack.cpp  lez6_trackball.cpp  lez7_combiner.cpp  lez8_picking.cpp  lez9_load_shade.cpp
(+42 files in other folders)
